openshift/base/infrastructure/mongodb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: airlines-backend-microservices
  labels:
    app: mongodb
spec:
  serviceName: mongodb-service          # must match Service.metadata.name
  replicas: 1
  selector:
    matchLabels:
      app: mongodb                     # selects Pods with this label
  template:
    metadata:
      labels:
        app: mongodb                   # applied to Pods, matches selector
    spec:
      securityContext:
        fsGroup: 1000650000            # lets OpenShift’s random UID write /data/db
      containers:
        - name: mongodb
          image: mongo:8.0.9
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage             # referred to by volumeMounts
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
